edited up to Reading tabular data into R section

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -2,7 +2,7 @@
 
 ## Overview 
 
-Learn to read in various cases of tabular data sets locally and from the web. Once read in, these data sets will be used to walk through a real world Data Science application that includes wrangling the data into a useable format and creating an effective data visualization.
+Learn to read in spreadsheet-like data of various formats from your local device and from the web. Once read in, these data sets will be used to walk through a real world Data Science application that includes wrangling the data into a useable format and creating an effective data visualization.
 
 ## Chapter learning objectives
 By the end of the chapter, students will be able to:
@@ -17,48 +17,42 @@ By the end of the chapter, students will be able to:
     - `col_names`
     - `skip`
 * choose the appropriate `tidyverse` `read_*` function and function arguments to load a given tabular data set into R
-* use the `rvest` `html_nodes`, `html_text` and `html_attr` functions to scrape data from a `.html` file on the web
+* use `readxl` library's `read_excel` function and arguments to load a sheet from an excel file into R
+* use the `DBI` library's `dbconnect` fucntion to connect to a SQLite database file, and query that file using functions the `dbplyr` library
+
+*Bonus material for this week:*
+* use the `rvest` library's `html_nodes`, `html_text` and `html_attr` functions to scrape data from a `.html` file on the web
 * compare downloading tabular data from a plain text file (e.g., `.csv`) from the web versus scraping data from a `.html` file
 
 ## Absolute and relative file paths
 
-When you load in a data set a plain text file  (e.g., `.csv`), you need to tell R where that files lives on the computer you are using. We call this the "path" to the file. There are two kinds of paths, relative paths and absolute paths. A relative path is where the file is in respect to where you currently are on the computer (e.g., where the Jupyter notebook file you are working in is). Whereas an absolute path is where the file is in respect to the base or root folder of the computer's filesystem.
+When you load virtually any data set into R you need to tell R where that files lives. The file could live on your computer, or somewhere on the internet. In this section we will discuss the case where the file lives on your computer.
 
-If our computer's filesystem looked like the picture below, and we were working in the Jupyter notebook titled "homework_02.ipynb" and we wanted to read in the `.csv` file named `avocado_prices.csv` into our Jupyter notebook using R, we could do this using either a relative or an absolute path. We show what both would be below.
+The place the file lives on your computer is called the "path". You can think of the path as directions to the file. There are two kinds of paths, relative paths and absolute paths. A relative path is where the file is in respect to where you currently are on the computer (e.g., where the Jupyter notebook file you are working in is). Whereas an absolute path is where the file is in respect to the base or root folder of the computer's filesystem.
 
-```
-|-- Users
-    |-- guest
-        |-- Documents
-    |-- dawkins
-        |-- Documents
-            |-- dsci-100
-                |-- homework_01
-                |-- homework_02
-                    |-- homework_02.ipynb
-                    |-- data
-                        |-- avocado_prices.csv
-                |-- homework_03
-        |-- Desktop
-```
+If our computer's filesystem looked like the picture below, and we were working in the Jupyter notebook titled "worksheetk_02.ipynb" and we wanted to read in the `.csv` file named `happiness_report.csv` into our Jupyter notebook using R, we could do this using either a relative or an absolute path. We show what both would be below.
 
-##### Loading `avocado_prices.csv` using a relative path:
+<img src="img/file-system-for-export-to-intro-datascience.svg" width="840">
+
+##### Reading `happiness_report.csv` using a relative path:
 
 ```
-avocado_data <- read_csv("data/avocado_prices.csv")
+happiness_data <- read_csv("data/happiness_report.csv")
 ```
 
-##### Loading `avocado_prices.csv` using an absolute path:
+##### Reading `happiness_report.csv` using an absolute path:
 
 ```
-avocado_data <- read_csv("/Users/dawkins/Documents/dsci-100/homework_02/data/avocado_prices.csv")
+happiness_data <- read_csv("/home/jupyter/dsci-100/worksheet_02/data/happiness_report.csv")
 ```
 
-So which one should you use? Well to ensure your code can be run across different machines, you should choose to use the relative path (and it's also less typing!). 
+So which one should you use? Well to ensure your code can be run on a different computer, you should choose to use the relative path (and it's also less typing!). Why would the absolute path not work on a different computer? The reason for this is that the names and the folder structure of the path between a computer's root folder (named `/`) and any files and folders you are usually working with will be different depending on who owns the computer (usually there is a different user name on each computer) and where the files and folders happen to be located on that particular computer. 
 
 See this video for another explanation: 
 
 <iframe width="840" height="473" src="https://www.youtube.com/embed/ephId3mYu9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+*Source: [Udacity course "Linux Command Line Basics"](https://www.udacity.com/course/linux-command-line-basics--ud595)*
 
 ## Reading tabular data into R
 
