--- a/index.Rmd
+++ b/index.Rmd
@@ -33,20 +33,18 @@ output:
 
 # Introduction to Data Science
 
-This is an open source textbook aimed at introducing undergraduate students to Data Science. It was originally written for the University of British Columbia's [DSCI 100 - Introduction to Data Science course](https://ubc-dsci.github.io/dsci-100/). In this book and course we define data science as the processes used to obtain value (i.e., insight) from data through reproducible and auditable processes.
+This is an open source textbook aimed at introducing undergraduate students to Data Science. It was originally written for the University of British Columbia's [DSCI 100 - Introduction to Data Science](https://ubc-dsci.github.io/dsci-100/) course. In this book, we define data science as the processes used to obtain value (i.e., insight) from data through reproducible and auditable processes. 
 
-This course uses Jupyter and the R programming language to illustrate how to solve 4 common problems in Data Science:
+The book is structured so that learners spend the first four chapters learning how to use the R programming language and Jupyter notebooks to load, wrangle/clean, and visualize data, while answering descriptive and exploratory data analysis questions. The remaining chapters illustrate how to solve four common problems in data science, which are useful for answering predictive and inferential data analysis questions:
 
 1. Predicting a class/category for a new observation/measurement (e.g., cancerous or benign tumour)
 2. Predicting a value for a new observation/measurement (e.g., 10 km race time for 20 year old females with a BMI of 25).
 3. Finding previously unknown/unlabelled subgroups in your data (e.g., products commonly bought together on Amazon)
 4. Estimating an average or a proportion from a representative sample (group of people or units) and using that estimate to generalize to the broader population  (e.g., the proportion of undergraduate students that own an iphone)
 
-For each of these problems, we map them to the type of data analysis question being asked and discuss what kinds of data are neded to answer such questions. 
+For each of these problems, we map them to the type of data analysis question being asked and discuss what kinds of data are needed to answer such questions. More advanced (e.g., causal or mechanistic) data analysis questions are beyond the scope of this text.
 
 <!---FIGURE ON DATA ANALYSIS QUESTIONS TO GO HERE--->
-
-This book/course is structured so that learners spend the first four chapters learning how to use R to load, wrangle/clean and visualize data while answering descriptive and exploratory data analysis questions. The remaining chapters cover solutions to the four problems discussed above, which are useful for answering predictive and inferential data analysis questions. Causal and mechanistic data analysis questions are beyond the scope of this course.
 
 ## Chapter learning objectives
 
@@ -68,7 +66,7 @@ By the end of the chapter, students will be able to:
 
 ## Jupyter notebooks
 
-Jupyter Notebooks are documents that contain a mix of computer code (and its output) and formattable text. Given that they can mix these two things in a single document (code is not separate from the output or written report), they are one of the leading tools to create reproducible data analysis. A reproducible data analysis is one where you can reliably and easily recreate the same results when reanalyzing the same data. This sounds like this is something that should always happen with any data analysis, but in reality this is not often the case and one needs to make concious effort in the way they do their data analysis to ensure that it is reproducible.
+Jupyter notebooks are documents that contain a mix of computer code (and its output) and formattable text. Given that they are able to combine these two in a single document---code is not separate from the output or written report---notebooks are one of the leading tools to create *reproducible data analyses*. A reproducible data analysis is one where you can reliably and easily recreate the same results when analyzing the same data. Although this sounds like something that should always be true of any data analysis, in reality this is not often the case; one needs to make a conscious effort to perform data analysis in a reproducible manner.
 
 The name Jupyter came from combining the names of the three programming language that it was initially targeted for (Julia, Python, and R), and now many other languages can be used with Jupyter notebooks. 
 
@@ -76,31 +74,23 @@ A notebook looks like this:
 
 <img src="img/jupyter.png">
 
-We have created a short demo video to help you get started and introduce you to Jupyter: 
+We have included a short demo video here to help you get started and to introduce you to R and Jupyter. 
+However, the best way to learn how to write and run code and formattable text in a Jupyter notebook is to do it yourself! [Here is a worksheet](https://github.com/UBC-DSCI/dsci-100-assets/blob/master/materials/worksheet_01/worksheet_01.ipynb) that provides a step-by-step guide through the basics.
 
 <iframe width="840" height="473" src="https://www.youtube.com/embed/2yv4pEmFgnw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-However, the best way to learn how to write and run code and formattable text in a Jupyter notebook is to do it. So we have also created this worksheet as a step-by-step guide through it: https://github.com/UBC-DSCI/dsci-100/blob/master/materials/worksheet_01/worksheet_01.ipynb
-
-
 ## Loading a spreadsheet-like dataset
 
-Often, the first thing we need to do in data analysis is to load a dataset into R. When we bring spreadsheet-like (think Microsof Excel tables) data, generally shaped like a rectangle, into R it is represented as what we call a "data frame" object. It is very similar to a spreadsheet where the rows are the observations collected/measured and the columns are the variables. 
+Often, the first thing we need to do in data analysis is to load a dataset into R. When we bring spreadsheet-like (think Microsoft Excel tables) data, generally shaped like a rectangle, into R it is represented as what we call a *data frame* object. It is very similar to a spreadsheet where the rows are the collected observations and the columns are the variables. 
 
 <img src="img/spreadsheet_vs_dataframe.PNG" width="850"/>
 
-The first data set we will learn how to load into R is in particular spreadsheet format called comma-separated file, or `.csv` for short. These files end in `.csv` and can be opened open and saved from common spreadsheet programs like Microsoft Excel and Google sheets. 
-
-To load a data set into R, and then to do anything else to it afterwards, we will need to use something called a function. A function is a special word in R that takes in instructions (we call these arguments) and does something. The function we will use to read a `.csv` file into R is called `read_csv`.
-
-In it's most basic use case, `read_csv` expects that the data file:
-
-- has column names,
-- uses a comma (`,`) to separate the columns, and
-- does not have row names.
-
-Let's explore how to do this! We will load a `.csv` file named "state_property_vote.csv" that is in the same folder as the file that contains this code. This data file is from https://datausa.io/ and has US state-level property, income, population and voting data from 2015 and 2016. If we were to open this data in a plain text editor, it would look like this:
-
+The first kind of data we will learn how to load into R (as a data frame) is the 
+spreadsheet-like *comma-separated values* format (`.csv` for short).
+These files have names ending in `.csv`, and can be opened open and saved from common spreadsheet programs like Microsoft Excel and Google Sheets. 
+For example, a `.csv` file named `state_property_vote.csv` [is included with the code for this book](https://github.com/UBC-DSCI/introduction-to-datascience/blob/master/data/state_property_data.csv). 
+This file--- originally from [Data USA](https://datausa.io/)---has US state-level property, income, population and voting data from 2015 and 2016. 
+If we were to open this data in a plain text editor, we would see each row on its own line, and each entry in the table separated by a comma:
 ```
 state,med_income,med_prop_val,population,mean_commute_minutes,party
 AK,64222,197300,733375,10.46830207,republican
@@ -114,61 +104,88 @@ DC,70848,475800,647484,28.2534,democrat
 DE,54976,228500,926454,24.45553333,democrat
 ```
 
-Below we demonstrate the code used to load the data into R. To do this, we first need to load the `tidyverse` library. We have to do this because the `read_csv` function was not included in the base installation of R, and so to be able to use it we have to load it from somewhere else - an R library called the `tidyverse` (more on this later). We do this using the library function. 
+To load this data into R, and then to do anything else with it afterwards, we will need to use something called a *function.* 
+A function is a special word in R that takes in instructions (we call these *arguments*) and does something. The function we will 
+use to read a `.csv` file into R is called `read_csv`.
 
-Next we call the `read_csv` function and pass it a single argument, the name of the file - "state_property_data.csv". We have to put quotes around filenames and other letters and words that we use in our code to distinguish it from the special words that make up R programming language.  This is the only argument we need to provide for this file because our file satifies everthing else the `read_csv` function expects of files in the default use case (which we just discussed). Later in the course, we'll learn more about how to deal with files where the default arguments are not appropriate. For example, files that use spaces or tabs to separate the columns, or with no column names (headers).
+In its most basic use-case, `read_csv` expects that the data file:
+
+- has column names (or *headers*),
+- uses a comma (`,`) to separate the columns, and
+- does not have row names.
+
+Below you'll see the code used to load the data into R using the `read_csv` function. But there is one extra step we need to do first. Since `read_csv` is not included in the base installation of R, 
+to be able to use it we have to load it from somewhere else: a collection of useful functions known as a *library*. The `read_csv` function in particular
+is in the `tidyverse` library (more on this later), which we load using the `library` function.
+
+Next, we call the `read_csv` function and pass it a single argument: the name of the file, `"state_property_vote.csv"`. We have to put quotes around filenames and other letters and words that we 
+use in our code to distinguish it from the special words that make up R programming language.  This is the only argument we need to provide for this file, because our file satifies everthing else 
+the `read_csv` function expects in the default use-case (which we just discussed). Later in the course, we'll learn more about how to deal with more complicated files where the default arguments are not 
+appropriate. For example, files that use spaces or tabs to separate the columns, or with no column names.
 
 ```{r load state property data, warning=FALSE, message=FALSE}
 library(tidyverse)
 read_csv("state_property_vote.csv")
 ```
+Above you can also see something neat that Jupyter does to help us understand our code: it colours text depending on its meaning in R. For example, 
+you'll note that functions get bold green text, while letters and words surrounded by quotations like filenames get blue text.
 
-
-> **In case you have used R before and might be interested...** 
-> Why the `read_csv` function from the `tidyverse` instead of the base R function `read.csv`? This is because `read_csv` is faster than `read.csv` and it creates a nicer variant of the base R data frame, called a tibble, that has several helpful properties we'll discuss in further detail later in the course.
+> **In case you have used R before and are curious:** 
+> We use the `read_csv` function from the `tidyverse` instead of the base R function `read.csv` because it's faster and it creates a nicer variant of the base R data frame called a *tibble*. 
+> This has several benefits that we'll discuss in further detail later in the course.
 
 ## Assigning value to a data frame
 
-When we loaded the US state-level property, income, population and voting data in R above using `read_csv`, we did not give this data frame a name, so it was merely printed to the screen and we cannot do anything else with it. This is not that useful - what we would like to do is give the output of the `read_csv` function, a data frame, a name so that we can use it later for analysis and visualization. 
+When we loaded the US state-level property, income, population, and voting data in R above using `read_csv`, we did not give this data frame a name, so it was 
+just printed to the screen and we cannot do anything else with it. That isn't very useful; what we would like to do is give a name to the data frame that `read_csv` outputs
+so that we can use it later for analysis and visualization. 
 
-To assign name to something in R, there are two possible ways - using either the assignment symbol (`<-`) or the equals symbol (`=`). From a style perspective, the assignment symbol is prefered and is what we will use in this course. When we name something in R using the assignment symbol, `<-`, we do not need to surround it with quotes like the filename. This is because we are formally telling R about this word and giving it a value. Only characters and words that act as values need to be surrounded by quotes.
+To assign name to something in R, there are two possible ways---using either the assignment symbol (`<-`) or the equals symbol (`=`). From a style perspective, 
+the assignment symbol is preferred and is what we will use in this course. When we name something in R using the assignment symbol, `<-`, we do not need to surround 
+it with quotes like the filename. This is because we are formally telling R about this word and giving it a value. Only characters and words that act as values need 
+to be surrounded by quotes.
 
-Let's now use the assignment symbol to name the US state-level property, income, population and voting data frame, that we get from `read_csv`, `us_data`.
+Let's now use the assignment symbol to give the name `us_data` to the US state-level property, income, population, and voting data frame that we get from `read_csv`.
 
-```{r load data with name}
+```{r load data with name, message=FALSE}
 us_data <- read_csv("state_property_vote.csv")
 ```
 
-
-Wait a minute! Nothing happened this time! Or at least it looks like that. But actually something did happen, the data was read in and now has the name `us_data` associated with it. And we can use that name to access the data frame and do things with it. First we will type the name of the data frame to print it to the screen.
+Wait a minute! Nothing happened this time! Or at least it looks like that. But actually something did happen: the data was read in and now has the name `us_data` associated with it. 
+And we can use that name to access the data frame and do things with it. First we will type the name of the data frame to print it to the screen.
 
 
 ```{r print}
 us_data
 ```
 
-## Subsetting data frames with `select` & `filter`
+## Creating subsets of data frames with `select` & `filter`
 
-Now, we are going to learn how to subset parts of data from a data frame in R using two other `tidyverse` functions named `select` and `filter`. `select()` allows you to subset columns of a data frame, while `filter()` allows you to subset rows with specific values.
+Now, we are going to learn how to obtain subsets of data from a data frame in R using two other `tidyverse` functions: `select` and `filter`. 
+The `select` function allows you to create a subset of the columns of a data frame, while the `filter` function allows you to obtain a subset of the rows with specific values.
 
-Before we start using `select` and `filter`, let's take a look at the US state-level property, income and population data again to familiarize ourselves with it. We will do this by printing the data we loaded earlier in the chapter to the screen. 
+Before we start using `select` and `filter`, let's take a look at the US state-level property, income, and population data again to familiarize ourselves with it. 
+We will do this by printing the data we loaded earlier in the chapter to the screen. 
 
 ```{r print data again}
 us_data
 ```
 
 
-When we look at the data frame we see there are 6 columns: 
+In this data frame there are 52 rows (corresponding to the 50 US states, the District of Columbia and the US territory, Puerto Rico)
+and 6 columns: 
+
 1. US state abbreviation
 2. Median household income
 3. Median property value
 4. US state population
-5. Mean communte time in minutes
+5. Mean commute time in minutes
 6. The party each state voted for in the 2016 US presidential election
 
-There are 52 rows in this dataset (corresponding to the 50 US states, the District of Columbia and the US territory, Puerto Rico). 
 
-Now let's use `select` to subset the state column from this data frame. To use `select` to subset the state column, we'll provide the function with two arguments. The first argument is the name of the data frame object, here `us_data`. The second argument is the column name that we want to subset, here `state`. `select` returns a single column (the state column that we asked for) as a data frame.
+Now let's use `select` to extract the state column from this data frame. To do this, we need to provide the `select` function with two arguments. The first argument is the 
+name of the data frame object, which in this example is `us_data`. The second argument is the column name that we want to select, here `state`. After passing these two arguments,
+the  `select` function returns a single column (the state column that we asked for) as a data frame.
 
 
 ```{r}
@@ -177,9 +194,10 @@ state_column
 ```
 
 
-### Using `select` to subset multiple columns
+### Using `select` to extract multiple columns
 
-We can also use `select()` to subset multiple columns. Again, the first argument is the name of the data frame. Then we list all the columns we want as arguments separated by commas. Here the list was three columns: state, median property value and mean commute time in minutes.
+We can also use `select` to obtain a subset of the data frame with multiple columns. Again, the first argument is the name of the data frame. 
+Then we list all the columns we want as arguments separated by commas. Here we create a subset of three columns: state, median property value, and mean commute time in minutes.
 
 ```{r}
 three_columns <- select(us_data, state, med_prop_val, mean_commute_minutes)
@@ -187,32 +205,38 @@ three_columns
 ```
 
 
-### Using `select` to subset a range of columns
+### Using `select` to extract a range of columns
 
-We can also use `select` to subest a range of columns using the colon. For example, to get all the columns from state to med_prop_val we provide the second arugument to `select` as `state:med_prop_val`.
+We can also use `select` to obtain a subset of the data frame constructed from a range of columns. To do this we use the colon (`:`) operator to denote the range. 
+For example, to get all the columns in the data frame from `state` to `med_prop_val` we pass `state:med_prop_val` as the second argument to the `select` function.
 
 ```{r}
 column_range <- select(us_data, state:med_prop_val)
 column_range
 ```
 
-### Using `filter` to subset a single row
+### Using `filter` to extract a single row
 
-We can use the `filter` function to subset rows with desired values from a data frame of interest. Again, our first argument is the name of the data frame object, `us_data`. The second argument is a logical statement to filter the rows, here we say that we are interested in rows where state equals NY (for New York). To make this comparison we use the equivalency operator `==` to compare the values of the `state` column with the value "NY". Similar to when we loaded the data file and put quotes around the filename, here we need to put quotes around "NY" to tell R that this is a character value and not one of the special words that make up R programming language, nor one of the names we have given to data frames in the code we have already written.
+We can use the `filter` function to obtain the subset of rows with desired values from a data frame. Again, our first argument is the name of the data frame object, `us_data`. 
+The second argument is a logical statement to use when filtering the rows. Here, for example, we'll say that we are interested in rows where state equals NY (for New York). To make 
+this comparison, we use the *equivalency operator* `==` to compare the values of the `state` column with the value `"NY"`. Similar to when we loaded the data file and put quotes around the filename, 
+here we need to put quotes around `"NY"` to tell R that this is a character value and not one of the special words that make up R programming language, nor one of the names 
+we have given to data frames in the code we have already written.
 
-Filter returns a data frame that has all the columns of the input data frame but with only the rows we asked for in our filter statement. 
+With these arguments, `filter` returns a data frame that has all the columns of the input data frame but only the rows we asked for in our logical filter statement. 
 
 ```{r}
 new_york <- filter(us_data, state == "NY")
 new_york
 ```
 
-### Using `filter` to get rows with values above a threshold
+### Using `filter` to extract rows with values above a threshold
 
 
-If we are interested in finding information about the states who have a longer mean commute time than New York, whose mean commute time is 21.5 minutes, then we can provide an expression to filter to obtain rows where the value of mean_commute_minutes is greater than 21.5.
-
-We see that `filter()` returns to use a data frame with 33 rows indicating that there are 33 states with longer commute times on average than New York.
+If we are interested in finding information about the states who have a longer mean commute time than New York---whose mean commute time is 21.5 minutes---then we can create a filter 
+to obtain rows where the value of `mean_commute_minutes` is greater than 21.5.
+In this case, we see that `filter` returns a data frame with 33 rows; this indicates that there are 33 
+states with longer commute times on average than New York.
 
 ```{r}
 long_commutes <- filter(us_data, mean_commute_minutes > 21.5)
@@ -220,14 +244,23 @@ long_commutes
 ```
 
 
-## Creating Visualizations in R
+## Exploring data with visualizations
 
-Creating data visualizations is an essential piece to any data analysis. For the remainder of Chapter 1, we will learn how we can use some of the `tidyverse` functions to make visualizations to explore if there is a relationship between median household income and median propery value across these US regions, as well as whether there is a pattern in which party each state voted for in the 2016 US election. This is an example of an exploratory data analysis question, as we are looking for relationships and patterns within the data set we have, but are not trying to generalize what we find beyond this data set. 
+Creating effective data visualizations is an essential piece to any data analysis. For the remainder of Chapter 1, we will learn how to use
+functions from the `tidyverse` to make visualizations that let us explore relationships in data. In particular, we'll develop a visualization
+of the US property, income, population, and voting data we've been working with that will help us understand two potential relationships in the data:
+first, the relationship between median household income and median propery value across the US, and second, whether there is a pattern in which party each state 
+voted for in the 2016 US election. This is an example of an exploratory data analysis 
+question: we are looking for relationships and patterns within the data set we have, but are not trying to generalize what we find beyond this data set. 
 
 ### Using `ggplot` to create a scatter plot
 
-First, take another look at the dataset we have been focusing on - the US state-level property, income and population data from 2015. We can see that there is a row (which corresponds to an observation) for each state. And the two columns (which correspond to variables) we are interested in visualizing, median household income and median property value, are each in separate columns - thus the data are what we call a tidy data format. This is really important for `ggplot()` and many of the other `tidyverse` functions (as you will learn more in later chapters). 
-
+Taking another look at our dataset below, we can immediately see that the three columns (or variables) we are interested in visualizing---median household 
+income, median property value, and election result---are all in separate columns. In addition, there is a single row (or observation) for each state. 
+The data are therefore in what we call a *tidy data* format. 
+This is particularly important and will be a major focus in the remainder of this course: many of the functions from `tidyverse` require tidy data, 
+including the `ggplot` function that we will use shortly for our visualization. Note below that we use the `print` function to display the `us_data` rather
+than just typing `us_data`; for data frames, these do the same thing.
 
 ```{r}
 print(us_data)
@@ -235,12 +268,13 @@ print(us_data)
 
 ### Using `ggplot` to create a scatter plot
 
-To create a scatter plot of these two variables using the `ggplot` function, we would do the following: 
+We will begin with a scatter plot of the income and property value columns from our data frame.
+To create a scatter plot of these two variables using the `ggplot` function, we do the following: 
 
 1. call the `ggplot` function
 2. provide the name of the data frame as the first argument
 3. call the aesthetic function, `aes`, to specify which column will correspond to the x-axis and which will correspond to the y-axis
-4. add a "+" symbol at the end of the `ggplot` call to add a layer to the plot
+4. add a `+` symbol at the end of the `ggplot` call to add a layer to the plot
 5. call the `geom_point` function to tell R that we want to represent the data points as dots/points to create a scatter plot.
 
 ```{r prop_val_vs_income, fig.width=4.75, fig.height=4, warning=FALSE}
@@ -248,9 +282,19 @@ ggplot(us_data, aes(x = med_income, y = med_prop_val)) +
     geom_point()
 ``` 
 
+> **In case you have used R before and are curious:** 
+> There are a small number of situations in which you can have a single R expression span multiple lines. 
+> Here, the `+` symbol at the end of the first line tells R that the expression isn't done yet and to
+> continue reading on the next line. While not strictly necessary, this sort of pattern will appear a 
+> lot when using `ggplot` as it keeps things more readable.
+
+
 ### Formatting ggplot objects
 
-One common and easy way to format, or change an aspect of your `ggplot` visualization is to add additional layers to your plot object using the `+` symbol. Here we use the `xlab` and `ylab` functions to add layers where we specify human readable labels for the x and y axis, respectively. There are many more layers we can add to format the plot further, and we will explore these in later chapters.
+One common and easy way to format your `ggplot` visualization is to add additional layers to the plot object using the `+` symbol. 
+For example, we can use the `xlab` and `ylab` functions to add layers where we specify human readable labels for the x and y axes. 
+Again, since we are specifying words (e.g. `"Income (USD)"`) as arguments to `xlab` and `ylab`, we surround them with double quotes.
+There are many more layers we can  add to format the plot further, and we will explore these in later chapters.
 
 ```{r prop_val_vs_income_human_labs, fig.width=4.75, fig.height=4, warning=FALSE}
 ggplot(us_data, aes(x = med_income, y = med_prop_val)) +
@@ -259,15 +303,23 @@ ggplot(us_data, aes(x = med_income, y = med_prop_val)) +
     ylab("Median property value (USD)")    
 ```
 
-From this visualization we see that for the 52 US regions in this data set, as median household income increases so does median property value. When we see two variables do this, we call this a positive relationship. Because of the data point in the lower left-hand corner, drawing a straight line through these points wouldn't fit very well. When a straight-line doesn't fit the data well we say that it's non-linear. Because the increasing pattern is fairly clear (not fuzzy) we can say that the relationship is strong. 
+From this visualization we see that for the 52 US regions in this data set, as median household income increases so does median property value. When we see 
+two variables do this, we call this a *positive relationship*. Because of the data point in the lower left-hand corner, drawing a straight line through these 
+points wouldn't fit very well. When a straight-line doesn't fit the data well we say that it's non-linear. Because the increasing pattern is fairly clear 
+(not fuzzy) we can say that the relationship is strong. 
 
-Learning how to describe data visualizations is a very useful skill and we will do this for you in our course (as we did above) until we get to Chapter 4 which focuses on data visualization. There we will explicitly teach you how to do this yourself, and how to not over-state or over-interpret the results from a data visualization.
+Learning how to describe data visualizations is a very useful skill. We will provide descriptions for you in this course (as we did above) until we get to Chapter 4, 
+which focuses on data visualization. Then, we will explicitly teach you how to do this yourself, and how to not over-state or over-interpret the results 
+from a visualization.
 
 ### Coloring points by group
-Remembering the second part of our exploratory data analysis question: when considering the relationship between median household income and median property value, **is there a pattern in which party each state voted for in the 2016 US election?** One common way to explore this is to colour the data points on a scatter plot by a group/category in the data set. For example,
-given that we have the party each state voted for in the 2016 US Presidential election in the column named `party`, we can colour the points in our previous scatter plot to represent who each stated voted for. 
+Now we'll move onto the second part of our exploratory data analysis question: when considering the relationship between median household income and median property 
+value, is there a pattern in which party each state voted for in the 2016 US election? One common way to explore this is to colour the data points on the 
+scatter plot we have already created by group/category. For example,
+given that we have the party each state voted for in the 2016 US Presidential election in the column named `party`, we can colour the points in our previous 
+scatter plot to represent who each stated voted for. 
 
-To do this we modify our scatter plot code above, specifically we add a colour argument to the `aes` function and we give that the value of the column we would like to colour the points by, here party:
+To do this we modify our scatter plot code above. Specifically, we will add an argument to the `aes` function, specifying that the points should be coloured by the `party` column:
 
 ```{r scatter colour by party, fig.width=5.75, fig.height=4, warning=FALSE}
 ggplot(us_data, aes(x = med_income, y = med_prop_val, color = party)) +
@@ -276,7 +328,8 @@ ggplot(us_data, aes(x = med_income, y = med_prop_val, color = party)) +
   ylab("Median property value (USD)")
 ```
 
-From making this data visualization we see that one data point has the label of "not applicable" instead of "democrat" or "republican". Let's use filter to look at the row that contains the "not applicable" value in the party column:
+This data visualization shows that the one data point we singled out earlier on the far left of the plot has the label of "not applicable" instead of "democrat" or "republican". 
+Let's use filter to look at the row that contains the "not applicable" value in the party column:
 
 ```{r}
 missing_party <- filter(us_data, party == "not applicable")
@@ -284,14 +337,17 @@ missing_party
 ```
 
 
-Ah, this explains it! That row in the dataset is actually not a US state, it is the US territory of Peurto Rico. Similar to other US territories, Puerto Rico resident's cannot vote for the US President. Hence the "not applicable" label. Let's remove this row from the data frame and rename the data frame `vote_data`. To do this we use the opposite of the equivalency operator, `==`, for our filter statement, the not equivalent operator, `!=` .
+That explains it! That row in the dataset is actually not a US state, but rather the US territory of Peurto Rico. Similar to other US territories, residents of Puerto Rico 
+cannot vote in presidential elections. Hence the "not applicable" label. Let's remove this row from the data frame and rename the data frame `vote_data`. 
+To do this, we use the opposite of the equivalency operator (`==`) for our filter statement, the not equivalent operator (`!=`).
 
 ```{r}
 vote_data <- filter(us_data, party != "not applicable")
 vote_data
 ```
 
-Now we see that the data frame has 51 rows, these correspond to the 50 states and the District of Columbia - all regions where residents can vote in the US presidential election. Let's now recreate the scatter plot we created above using this data frame:
+Now we see that the data frame has 51 rows corresponding to the 50 states and the District of Columbia - all regions where residents can vote in US presidential elections. 
+Let's now recreate the scatter plot we made above using this data frame subset:
 
 ```{r scatter colour by party no PR, fig.width=5.75, fig.height=4, warning=FALSE}
 ggplot(vote_data, aes(x = med_income, y = med_prop_val, color = party)) +
@@ -300,13 +356,19 @@ ggplot(vote_data, aes(x = med_income, y = med_prop_val, color = party)) +
   ylab("Median property value (USD)")
 ```
 
-What do we see when considering the second part of our exploratory question? Do we see a pattern in how certain states voted in the 2016 Presidential election? We do! Most of the US States who voted for the Republican candidate in the 2016 US Presidential election had lower median household income and lower median property values (data points primarily fall in lower left-hand side of the scatter plot), whereas most of the US states who voted for the Democratic candidate in the 2016 US Presidential election had higher median household income and higher median property values (data points primarily fall in the upper right-hand side of the scatter plot).
+What do we see when considering the second part of our exploratory question? Do we see a pattern in how certain states voted in the 2016 Presidential election? We do! 
+Most of the US States who voted for the Republican candidate in the 2016 US Presidential election had lower median household income and lower median property values (data points primarily 
+fall in lower left-hand side of the scatter plot), whereas most of the US states who voted for the Democratic candidate in the 2016 US Presidential election had higher median household 
+income and higher median property values (data points primarily fall in the upper right-hand side of the scatter plot).
 
-Does this mean that rich states usually vote for Democrats and poorer states generally vote for Republicans? Or could we use this data visualization on its own to predict who each state will elect in the next presidential election? The answer to both these questions is no. What we can do with this exploratory data analysis is use it to create new hypotheses and ideas to pose new questions (like the ones at the beginning of this paragraph). Answering those questions would likely involve gathering additional data and doing more complex analyses, which we will see some examples of later in this course.
+Does this mean that rich states usually vote for Democrats and poorer states generally vote for Republicans? Or could we use this data visualization on its own to predict which party each 
+state will vote for in the next presidential election? The answer to both these questions is "no." What we can do with this exploratory data analysis is create new hypotheses, ideas, 
+and questions (like the ones at the beginning of this paragraph). Answering those questions would likely involve gathering additional data and doing more complex analyses, which we will 
+see more of later in this course.  
 
 ### Putting it all together
 
-Below, we put it all together in one code chunk, and you can see here that in relatively few lines of R code we are able to create an entire data science workflow:
+Below, we put everything from this chapter together in one code chunk. This demonstrates the power of R: in relatively few lines of code, we are able to create an entire data science workflow.
 
 ```{r nachos to cheesecake, fig.width=5.75, fig.height=4, warning=FALSE, message=FALSE}
 library(tidyverse)
@@ -324,4 +386,4 @@ ggplot(vote_data, aes(x = med_income, y = med_prop_val, color = party)) +
 
 ### What's next?
 
-In the next chapter we are going to dig in and spend more time learning how to load various differently formatted spreadsheet-like data sets into R, as well as how to scrape data from the web!
+In the next chapter, we will dig in and spend more time learning how to load spreadsheet-like datasets of various formats into R, as well as how to scrape data from the web!
