final changes to chapter 1 for changes suggested in #21, ready to merge

--- a/index.Rmd
+++ b/index.Rmd
@@ -48,7 +48,20 @@ The book is structured so that learners spend the first four chapters learning h
 
 For each of these problems, we map them to the type of data analysis question being asked and discuss what kinds of data are needed to answer such questions. More advanced (e.g., causal or mechanistic) data analysis questions are beyond the scope of this text.
 
-<!---FIGURE ON DATA ANALYSIS QUESTIONS TO GO HERE--->
+**Types of data analysis questions**
+
+| Question type | Description | Example |
+|---------------|-------------|---------|
+| Descriptive | A question which asks about summarized characteristics of a data set without interpretation (i.e., report a fact). | How many people live in each US state?
+|
+| Exploratory | A question asks if there are patterns, trends, or relationships within a single data set. Often used to propose hypotheses for future study. | Does politcal party voting change with indicators of wealth in a set of data collected from groups of individuals from several regions in the United States? |
+|
+| Inferential | A question that looks for patterns, trends, or relationships in a single data set **and** also asks for quantification of how applicable these findings are to the wider population. | Does politcal party voting change with indicators of wealth in the United States? |
+| Predictive | A question that asks about predicting measurements or labels for individuals (people or things). The focus is on what things predict some outcome, but not what causes the outcome. | What political party will someone vote for in the next US election? |
+| Causal | A question that asks about whether changing one factor will lead to a change in another factor, on average, in the wider population. | Does wealth lead to voting for a certain political party candidate in the US Presidential election? |
+| Mechanistic | A question that asks about the underlying mechanism of the observed patterns, trends, or relationship (i.e., how does it happen?) | How does wealth lead to voting for a certain political party candidate in the US Presidential election? |
+
+Source: [What is the question?](https://science.sciencemag.org/content/347/6228/1314) by Jeffery T. Leek, Roger D. Peng & [The Art of Data Science](https://leanpub.com/artofdatascience) by Roger Peng & Elizabeth Matsui
 
 ## Chapter learning objectives
 
@@ -127,14 +140,14 @@ use in our code to distinguish it from the special words that make up R programm
 the `read_csv` function expects in the default use-case (which we just discussed). Later in the course, we'll learn more about how to deal with more complicated files where the default arguments are not 
 appropriate. For example, files that use spaces or tabs to separate the columns, or with no column names.
 
-```{r load state property data, warning=FALSE, message=FALSE}
+```{r load_state_property_data, warning=FALSE, message=FALSE}
 library(tidyverse)
 read_csv("state_property_vote.csv")
 ```
 Above you can also see something neat that Jupyter does to help us understand our code: it colours text depending on its meaning in R. For example, 
 you'll note that functions get bold green text, while letters and words surrounded by quotations like filenames get blue text.
 
-> **In case you have used R before and are curious:** 
+> **In case you want to know more (optional):** 
 > We use the `read_csv` function from the `tidyverse` instead of the base R function `read.csv` because it's faster and it creates a nicer variant of the base R data frame called a *tibble*. 
 > This has several benefits that we'll discuss in further detail later in the course.
 
@@ -151,7 +164,7 @@ to be surrounded by quotes.
 
 Let's now use the assignment symbol to give the name `us_data` to the US state-level property, income, population, and voting data frame that we get from `read_csv`.
 
-```{r load data with name, message=FALSE}
+```{r load_data_with_name, message=FALSE}
 us_data <- read_csv("state_property_vote.csv")
 ```
 
@@ -171,7 +184,7 @@ The `select` function allows you to create a subset of the columns of a data fra
 Before we start using `select` and `filter`, let's take a look at the US state-level property, income, and population data again to familiarize ourselves with it. 
 We will do this by printing the data we loaded earlier in the chapter to the screen. 
 
-```{r print data again}
+```{r print_data_again}
 us_data
 ```
 
@@ -329,7 +342,7 @@ To do this we modify our scatter plot code above. Specifically, we will add an a
 us_data <- us_data %>% mutate(party = factor(party, levels = c("Republican", "Not applicable", "Democrat")))
 ```
 
-```{r scatter colour by party, fig.width=5.75, fig.height=4, warning=FALSE}
+```{r scatter_colour_by_party, fig.width=5.75, fig.height=4, warning=FALSE}
 ggplot(us_data, aes(x = med_income, y = med_prop_val, color = party)) +
   geom_point() +
   xlab("Income (USD)") +
@@ -357,7 +370,7 @@ vote_data
 Now we see that the data frame has 51 rows corresponding to the 50 states and the District of Columbia - all regions where residents can vote in US presidential elections. 
 Let's now recreate the scatter plot we made above using this data frame subset:
 
-```{r scatter colour by party no PR, fig.width=5.75, fig.height=4, warning=FALSE}
+```{r scatter_colour_by_party_no_PR, fig.width=5.75, fig.height=4, warning=FALSE}
 ggplot(vote_data, aes(x = med_income, y = med_prop_val, color = party)) +
   geom_point() +
   xlab("Income (USD)") +
@@ -378,7 +391,7 @@ see more of later in this course.
 
 Below, we put everything from this chapter together in one code chunk. This demonstrates the power of R: in relatively few lines of code, we are able to create an entire data science workflow.
 
-```{r nachos to cheesecake, fig.width=5.75, fig.height=4, warning=FALSE, message=FALSE}
+```{r nachos_to_cheesecake, fig.width=5.75, fig.height=4, warning=FALSE, message=FALSE}
 library(tidyverse)
 
 us_data <- read_csv("state_property_vote.csv")
