--- a/index.Rmd
+++ b/index.Rmd
@@ -108,17 +108,9 @@ These files have names ending in `.csv`, and can be opened open and saved from c
 For example, a `.csv` file named `state_property_vote.csv` [is included with the code for this book](https://github.com/UBC-DSCI/introduction-to-datascience/blob/master/data/state_property_data.csv). 
 This file--- originally from [Data USA](https://datausa.io/)---has US state-level property, income, population and voting data from 2015 and 2016. 
 If we were to open this data in a plain text editor, we would see each row on its own line, and each entry in the table separated by a comma:
-```
-state,med_income,med_prop_val,population,mean_commute_minutes,party
-AK,64222,197300,733375,10.46830207,Republican
-AL,36924,94800,4830620,25.30990746,Republican
-AR,35833,83300,2958208,22.40108933,Republican
-AZ,44748,128700,6641928,20.58786,Republican
-CA,53075,252100,38421464,23.38085172,Democrat
-CO,48098,198900,5278906,19.50792188,Democrat
-CT,69228,246450,3593222,24.349675,Democrat
-DC,70848,475800,647484,28.2534,Democrat
-DE,54976,228500,926454,24.45553333,Democrat
+
+```{bash, echo=FALSE, comment=NA}
+head -n 10 state_property_vote.csv
 ```
 
 To load this data into R, and then to do anything else with it afterwards, we will need to use something called a *function.* 
