working on creating variants of data file

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -58,44 +58,24 @@ See this video for another explanation:
 
 Now we will learn more about reading tabular data into R, as well as how to write tabular data to a file. Last chapter we learned about using the `tidyverse` `read_csv` when the file we read it matches that functions expected defaults (column names are present, `,` is the delimiter/separator and there are no row names in the dataset ). We will now learn how to read files where that is not the case. 
 
-Before we jump into the cases where the `tidyverse` `read_csv` functions expected defaults are not the case, let's revisit how we use this with one that does and thus the only argument we need to give to the function is the path to the file, here "historical_vote.csv".
+Before we jump into the cases where the `tidyverse` `read_csv` functions expected defaults are not the case, let's revisit how we use this with one that does and thus the only argument we need to give to the function is the path to the file, here "data/state_property_vote.csv".
 
 Here is how the file would look in plain text editor:
 
-```
-election_num,election_year,winner,winner_party,elec_coll_votes_count,elec_coll_votes_perc,pop_votes_perc,pop_votes_perc_marg,pop_votes_count,pop_votes_count_marg,runner-up,runner-up_party,turnout
-10,1824,John Quincy Adams,D.-R.,84/261,32.18%,30.92%,−10.44%,"113,142","−38,221",Andrew Jackson,D.-R.,26.9%
-23,1876,Rutherford Hayes,Rep.,185/369,50.14%,47.92%,−3.00%,"4,034,142","−252,666",Samuel Tilden,Dem.,82.6%
+```{bash, echo=FALSE, comment=NA}
+head -n 10 data/state_property_vote.csv
 ```
 
 Using `read_csv` to load in R:
 
-```
+```{r}
 library(tidyverse)
-read_csv("historical_vote.csv")
+read_csv("data/state_property_vote.csv")
 ```
-
-```
-# A tibble: 49 x 13
-   election_num election_year winner            winne… elec_… elec_… pop_v… pop_v… pop_vo… pop_… `run… `run… turn…
-          <int>         <int> <chr>             <chr>  <chr>  <chr>  <chr>  <chr>    <dbl> <chr> <chr> <chr> <chr>
- 1           10          1824 John Quincy Adams D.-R.  84/261 32.18% 30.92% −10.4…  1.13e⁵ −38,… Andr… D.-R. 26.9%
- 2           23          1876 Rutherford Hayes  Rep.   185/3… 50.14% 47.92% −3.00%  4.03e⁶ −252… Samu… Dem.  82.6%
- 3           58          2016 Donald Trump      Rep.   304/5… 56.50% 45.98% −2.10%  6.30e⁷ −2,8… Hill… Dem.  60.2%
- 4           26          1888 Benjamin Harrison Rep.   233/4… 58.10% 47.80% −0.83%  5.44e⁶ −94,… Grov… Dem.  80.5%
- 5           54          2000 George W. Bush    Rep.   271/5… 50.37% 47.87% −0.51%  5.05e⁷ −543… Al G… Dem.  54.2%
- 6           24          1880 James Garfield    Rep.   214/3… 57.99% 48.31% 0.09%   4.45e⁶ 1,898 Winf… Dem.  80.5%
- 7           44          1960 John Kennedy      Dem.   303/5… 56.42% 49.72% 0.17%   3.42e⁷ 112,… Rich… Rep.  63.8%
- 8           25          1884 Grover Cleveland  Dem.   219/4… 54.61% 48.85% 0.57%   4.91e⁶ 57,5… Jame… Rep.  78.2%
- 9           46          1968 Richard Nixon     Rep.   301/5… 55.95% 43.42% 0.70%   3.18e⁷ 511,… Hube… Dem.  62.5%
-10           15          1844 James Polk        Dem.   170/2… 61.82% 49.54% 1.45%   1.34e⁶ 39,4… Henr… Whig  79.2%
-# ... with 39 more rows
-```
-
 
 ### `read_delim` as a more flexible method to get tabular data into R
 
-When our tabular data comes in a different format, we can use the `read_delim function()` instead. For example, a different version of this historical votes dataset has no column names and uses tabs as the delimiter instead of commas. 
+When our tabular data comes in a different format, we can use the `read_delim function()` instead. For example, a different version of this same dataset has no column names and uses tabs as the delimiter instead of commas. 
 
 Here is how the file would look in plain text editor:
 ```
